--- a/Clinic.WebAdmin/Views/Home/Index.cshtml
+++ b/Clinic.WebAdmin/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
 
 @{
     ViewData["Title"] = "Home Page";
-    ViewData["Breadcrumb"] = "...";
+    ViewData["BreadcrumbAnchor"] = "...";
+    ViewData["BreadcrumbLink"] = "/";
 }
 
 
@@ -19,7 +20,7 @@
                         <h5 class="card-subtitle">Database Overview</h5>
                     </div>
                 </div>
-                <div class="row dashboard-center">
+                <div class="row center-content">
                     <div class="col-lg-6">
                         <div class="row">
                             <a href="/Parameters" class="col-6">
