--- a/Clinic.WebAdmin/Views/Parameters/Delete.cshtml
+++ b/Clinic.WebAdmin/Views/Parameters/Delete.cshtml
@@ -1,81 +1,84 @@
 ﻿@model Clinic.Entities.Models.Parameter
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Parameter";
+    ViewData["BreadcrumbAnchor"] = "Delete Parameters";
+    ViewData["BreadcrumbLink"] = "/Parameters";
 }
 
-<h1>Delete</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Page</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+<hr />
+<div class="row center-content">
+    <dl class="row col-md-6">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Code)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Code)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Content)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.WhoAdded)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.WhoAdded)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.WhenAdded)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.WhenAdded)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.WhoModified)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.WhoModified)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.WhenModified)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.WhenModified)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.WhoRemoved)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.WhoRemoved)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.WhenRemoved)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.WhenRemoved)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.IsActive)
         </dd>
+
+        <div class="mt-4 align-center">
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="ParameterId" />
+                <input type="submit" value="Delete" class="btn btn-danger mb-3"/><br>   
+                <a asp-action="Index">Back to List</a>
+            </form>
+        </div>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ParameterId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
