--- a/Clinic.WebAdmin/Views/Parameters/Edit.cshtml
+++ b/Clinic.WebAdmin/Views/Parameters/Edit.cshtml
@@ -1,79 +1,107 @@
 ﻿@model Clinic.Entities.Models.Parameter
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Parameter";
+    ViewData["BreadcrumbAnchor"] = "Edit Parameters";
+    ViewData["BreadcrumbLink"] = "/Parameters";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Page</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row center-content">
+    <div class="col-md-6">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ParameterId" />
-            <div class="form-group">
-                <label asp-for="Code" class="control-label"></label>
-                <input asp-for="Code" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="Code" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Code" class="form-control" />
+                </div>
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="Name" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Name" class="form-control" />
+                </div>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="Content" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <textarea asp-for="Content" class="form-control" rows="5"></textarea>
+                </div>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhoAdded" class="control-label"></label>
-                <input asp-for="WhoAdded" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="WhoAdded" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhoAdded" class="form-control" />
+                </div>
                 <span asp-validation-for="WhoAdded" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhenAdded" class="control-label"></label>
-                <input asp-for="WhenAdded" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="WhenAdded" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhenAdded" class="form-control" />
+                </div>
                 <span asp-validation-for="WhenAdded" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhoModified" class="control-label"></label>
-                <input asp-for="WhoModified" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="WhoModified" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhoModified" class="form-control" />
+                </div>
                 <span asp-validation-for="WhoModified" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhenModified" class="control-label"></label>
-                <input asp-for="WhenModified" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="WhenModified" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhenModified" class="form-control" />
+                </div>
                 <span asp-validation-for="WhenModified" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhoRemoved" class="control-label"></label>
-                <input asp-for="WhoRemoved" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="WhoRemoved" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhoRemoved" class="form-control" />
+                </div>
                 <span asp-validation-for="WhoRemoved" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhenRemoved" class="control-label"></label>
-                <input asp-for="WhenRemoved" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="WhenRemoved" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhenRemoved" class="form-control" />
+                </div>
                 <span asp-validation-for="WhenRemoved" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="IsActive" class="control-label"></label>
-                <input asp-for="IsActive" class="form-control" />
+            <div class="form-group row">
+                <label asp-for="IsActive" class="col-md-3 mt-3ed"></label>
+                <div class="col-md-9">
+                    <input asp-for="IsActive" class="form-control" />
+                </div>
                 <span asp-validation-for="IsActive" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group row">
+                <span class="col-md-3 mt-3ed"></span>
+                <div class="col-md-9 align-center mt-3">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <div class="mt-4">
+                        <a asp-action="Index">Back to List</a>
+                    </div>
+                </div>
+
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
