--- a/Clinic.WebAdmin/Views/Shared/Partial/Footer.cshtml
+++ b/Clinic.WebAdmin/Views/Shared/Partial/Footer.cshtml
@@ -1,6 +1,8 @@
 ﻿<!-- ============================================================== -->
 <!-- footer -->
 <!-- ============================================================== -->
-<footer class="footer text-center">
-    All Rights Reserved by MEDIKA-Admin.
+<footer class="footer text-center mt-5">
+    <div class="mt-5">
+        All Rights Reserved by MEDIKA-Admin.
+    </div>
 </footer>
