--- a/Clinic.WebAdmin/wwwroot/css/site.css
+++ b/Clinic.WebAdmin/wwwroot/css/site.css
@@ -1,41 +1,49 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
-.form-group{
-    margin-bottom: 15px;
+.table-actions {
+    width: 77px;
 }
 
-.control-label {
-    margin-bottom: 5px;
-    color: #0d6efd;
+.table-admin td, .table-admin th {
+    border: 1px solid lightgray !important;
 }
 
-.table-actions{
-    width: 115px;
+.table-admin th {
+    color: white !important;
+    background-color: gray;
 }
 
 .bg-card {
     background-color: #7266C3;
 }
 
-.dashboard-center{
+.center-content {
     justify-content: center;
+}
+
+.align-center{
+    text-align:center;
+}
+
+.dashboard-margin{
+    margin-bottom: 20px;
 }
 
 .font-32 {
