feat: add style to doctors

--- a/Clinic.WebAdmin/Views/Doctors/Create.cshtml
+++ b/Clinic.WebAdmin/Views/Doctors/Create.cshtml
@@ -1,99 +1,140 @@
 ﻿@model Clinic.Entities.Models.Doctor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Doctor";
+    ViewData["BreadcrumbAnchor"] = "Create Doctor";
+    ViewData["BreadcrumbLink"] = "/Doctors";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Doctor</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row center-content">
+    <div class="col-md-6">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Name" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Name" class="form-control" />
+                </div><span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ImageSmall" class="control-label"></label>
-                <input asp-for="ImageSmall" class="form-control" />
-                <span asp-validation-for="ImageSmall" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="ImageSmall" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="ImageSmall" class="form-control" />
+                </div><span asp-validation-for="ImageSmall" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Image" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Image" class="form-control" />
+                </div><span asp-validation-for="Image" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Specialty" class="control-label"></label>
-                <input asp-for="Specialty" class="form-control" />
-                <span asp-validation-for="Specialty" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Specialty" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Specialty" class="form-control" />
+                </div><span asp-validation-for="Specialty" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Experience" class="control-label"></label>
-                <input asp-for="Experience" class="form-control" />
-                <span asp-validation-for="Experience" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Experience" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Experience" class="form-control" />
+                </div><span asp-validation-for="Experience" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Education" class="control-label"></label>
-                <input asp-for="Education" class="form-control" />
-                <span asp-validation-for="Education" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Education" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Education" class="form-control" />
+                </div><span asp-validation-for="Education" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Area" class="control-label"></label>
-                <input asp-for="Area" class="form-control" />
-                <span asp-validation-for="Area" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Area" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Area" class="form-control" />
+                </div><span asp-validation-for="Area" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Certifications" class="control-label"></label>
-                <input asp-for="Certifications" class="form-control" />
-                <span asp-validation-for="Certifications" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Certifications" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Certifications" class="form-control" />
+                </div><span asp-validation-for="Certifications" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ShortPresentation" class="control-label"></label>
-                <input asp-for="ShortPresentation" class="form-control" />
-                <span asp-validation-for="ShortPresentation" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="ShortPresentation" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <textarea asp-for="ShortPresentation" class="form-control" rows="3"></textarea>
+                </div><span asp-validation-for="ShortPresentation" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Biography" class="control-label"></label>
-                <input asp-for="Biography" class="form-control" />
-                <span asp-validation-for="Biography" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Biography" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <textarea asp-for="Biography" class="form-control" rows="5"></textarea>
+                </div><span asp-validation-for="Biography" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Position" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="Position" class="form-control" />
+                </div><span asp-validation-for="Position" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="IsHomePage" class="control-label"></label>
-                <input asp-for="IsHomePage" class="form-control" />
-                <span asp-validation-for="IsHomePage" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="IsHomePage" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="IsHomePage" class="form-control" />
+                </div><span asp-validation-for="IsHomePage" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhoModified" class="control-label"></label>
-                <input asp-for="WhoModified" class="form-control" />
-                <span asp-validation-for="WhoModified" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="WhoAdded" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhoAdded" class="form-control" />
+                </div><span asp-validation-for="WhoAdded" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhenModified" class="control-label"></label>
-                <input asp-for="WhenModified" class="form-control" />
-                <span asp-validation-for="WhenModified" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="WhenAdded" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhenAdded" class="form-control" />
+                </div><span asp-validation-for="WhenAdded" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhoRemoved" class="control-label"></label>
-                <input asp-for="WhoRemoved" class="form-control" />
-                <span asp-validation-for="WhoRemoved" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="WhoModified" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhoModified" class="form-control" />
+                </div><span asp-validation-for="WhoModified" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WhenRemoved" class="control-label"></label>
-                <input asp-for="WhenRemoved" class="form-control" />
-                <span asp-validation-for="WhenRemoved" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="WhenModified" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhenModified" class="form-control" />
+                </div><span asp-validation-for="WhenModified" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group row">
+                <label asp-for="WhoRemoved" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhoRemoved" class="form-control" />
+                </div><span asp-validation-for="WhoRemoved" class="text-danger"></span>
+            </div>
+            <div class="form-group row">
+                <label asp-for="WhenRemoved" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="WhenRemoved" class="form-control" />
+                </div><span asp-validation-for="WhenRemoved" class="text-danger"></span>
+            </div>
+            <div class="form-group row">
+                <label asp-for="IsActive" class="col-md-3 mt-3"></label>
+                <div class="col-md-9">
+                    <input asp-for="IsActive" class="form-control" />
+                </div><span asp-validation-for="IsActive" class="text-danger"></span>
+            </div>
+            <div class="form-group row">
+                <span class="col-md-3 mt-3ed"></span>
+                <div class="col-md-9 align-center mt-3">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <div class="mt-4">
+                        <a asp-action="Index">Back to List</a>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
