--- a/Clinic.WebAdmin/Views/Pages/Edit.cshtml
+++ b/Clinic.WebAdmin/Views/Pages/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Edit Page";
     ViewData["BreadcrumbAnchor"] = "Edit Page";
-    ViewData["BreadcrumbLink"] = "/Page";
+    ViewData["BreadcrumbLink"] = "/Pages";
 }
 
 <h1>@ViewData["Title"]</h1>
