--- a/Clinic.WebAdmin/Views/Parameters/Create.cshtml
+++ b/Clinic.WebAdmin/Views/Parameters/Create.cshtml
@@ -2,14 +2,14 @@
 
 @{
     ViewData["Title"] = "Create Parameter";
-    ViewData["BreadcrumbAnchor"] = "Create Parameters";
+    ViewData["BreadcrumbAnchor"] = "Create Parameter";
     ViewData["BreadcrumbLink"] = "/Parameters";
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <hr />
-<div class="row  center-content">
+<div class="row center-content">
     <div class="col-md-6">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
