--- a/Clinic.WebAdmin/Views/Parameters/Delete.cshtml
+++ b/Clinic.WebAdmin/Views/Parameters/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete Parameter";
-    ViewData["BreadcrumbAnchor"] = "Delete Parameters";
+    ViewData["BreadcrumbAnchor"] = "Delete Parameter";
     ViewData["BreadcrumbLink"] = "/Parameters";
 }
 
