--- a/Clinic.WebAdmin/Views/Parameters/Edit.cshtml
+++ b/Clinic.WebAdmin/Views/Parameters/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit Parameter";
-    ViewData["BreadcrumbAnchor"] = "Edit Parameters";
+    ViewData["BreadcrumbAnchor"] = "Edit Parameter";
     ViewData["BreadcrumbLink"] = "/Parameters";
 }
 
