feat: add doctor details in Clinic.WebPatient

--- a/Clinic.WebPatient/Views/Doctors/Partial/DoctorsPartial.cshtml
+++ b/Clinic.WebPatient/Views/Doctors/Partial/DoctorsPartial.cshtml
@@ -6,7 +6,8 @@
 
 @for(var i = 1; i <= modelLength; i++)
 {
-    if (i % 2 == 1) {
+    if(i % 2 == 1)
+    {
         <div class="row  m-t-30">
             <div class="col-lg-6 col-md-12">
                 <div class="card card-shadow team1">
@@ -15,7 +16,7 @@
                         <div class="row">
                             <div class="col-md-5 pro-pic po-relative"
                          style="
-                            background: url(../img/doctors/@Model.ElementAt(i-1).ImageSmall) center center;
+                            background: url(../img/doctors/@Model.ElementAt(i-1).ImageSmall) center center; background-repeat: no-repeat;
                           ">
                                 <div class="card-img-overlay">
                                     <div class="
@@ -53,6 +54,7 @@
                                     <p>
                                         @Model.ElementAt(i-1).ShortPresentation
                                     </p>
+                                    <a class="btn btn-info" asp-controller="Doctors" asp-action="Details" asp-route-id="@Model.ElementAt(i-1).DoctorId">Make an appointment</a>
                                 </div>
                             </div>
                         </div>
@@ -67,7 +69,7 @@
                         <div class="row">
                             <div class="col-md-5 pro-pic po-relative"
                          style="
-                            background: url(../img/doctors/@Model.ElementAt(i).ImageSmall) center center;
+                            background: url(../img/doctors/@Model.ElementAt(i).ImageSmall) center center; background-repeat: no-repeat;
                           ">
                                 <div class="card-img-overlay">
                                     <div class="
@@ -105,6 +107,7 @@
                                     <p>
                                         @Model.ElementAt(i).ShortPresentation
                                     </p>
+                                    <a class="btn btn-info" asp-controller="Doctors" asp-action="Details" asp-route-id="@Model.ElementAt(i).DoctorId">Make an appointment</a>
                                 </div>
                             </div>
                         </div>
